--- a/requirements.txt
+++ b/requirements.txt
@@ -2,14 +2,20 @@ aniso8601==1.3.0
 click==6.7
 Flask==0.12.2
 Flask-HTTPAuth==3.2.3
+flask-marshmallow==0.9.0
 Flask-PyMongo==0.5.1
 Flask-RESTful==0.3.6
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
-pkg-resources==0.0.0
+marshmallow==2.15.3
+nose==1.3.7
+numpy==1.14.3
+pandas==0.23.0
 pymongo==3.6.0
 python-dateutil==2.6.1
 pytz==2017.3
+scikit-learn==0.19.1
+scipy==1.1.0
 six==1.11.0
 Werkzeug==0.13
